kubernetes/api-kubernets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  #replicas: 3
  selector:
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      containers:
      - name: menu-api
        image: adolfoarmas90/menu_api:29
        ports:
        - containerPort: 8000
