kubernetes/postgres-kubernets.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: django-db
spec:
  selector:
    matchLabels:
      app: django
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
        tier: db
    spec:
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: django-db-pvc
      containers:
      - image: postgres:15.2
        name: db
        ports:
        - containerPort: 5432
          name: db
        volumeMounts:
          - name: db-data
            mountPath: /var/lib/postgresql/custom-data
