kubernetes/frontend-kubernets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  #replicas: 3
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: menu-frontend
        image: adolfoarmas90/menu_frontend:28
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    role: frontend
