kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: api

---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports
