kubernetes/ingress-kubernets.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
